Fix .buttons being improperly sized on narrow screens

--- a/css/main.css
+++ b/css/main.css
@@ -371,3 +371,9 @@ a.button {
     pointer-events: auto;
   }
 }
+
+@media only screen and (max-width: 550px) {
+  .buttons {
+    min-height: 120px;
+  }
+}
